# cpp-ap

./: .bazelrc  .clang-format  .clangd  .gitignore  .gitmodules  BUILD  BUILD.bazel  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  MODULE.bazel  README.md  arg_desc_test  arg_desc_test.cpp  change_log.md  conanfile.py
1.0/: annotated.html  argument__parser_8hpp.html  argument__parser_8hpp_source.html  argument__parser__test__fixture_8hpp_source.html  classap_1_1argument_1_1detail_1_1argument__interface-members.html  classap_1_1argument_1_1detail_1_1argument__interface.html  classap_1_1argument_1_1optional__argument-members.html  classap_1_1argument_1_1optional__argument.html  classap_1_1argument_1_1positional__argument-members.html  classap_1_1argument_1_1positional__argument.html  classap_1_1argument__parser-members.html  classap_1_1argument__parser.html  classap_1_1argument__parser__error-members.html  classap_1_1argument__parser__error.html  classap_1_1error_1_1argument__name__used__error-members.html  classap_1_1error_1_1argument__name__used__error.html  classap_1_1error_1_1argument__not__found__error.html  classap_1_1error_1_1free__value__error-members.html  classap_1_1error_1_1free__value__error.html  classap_1_1error_1_1invalid__choice__error-members.html  classap_1_1error_1_1invalid__choice__error.html  classap_1_1error_1_1invalid__nvalues__error.html  classap_1_1error_1_1invalid__value__error.html  classap_1_1error_1_1invalid__value__type__error-members.html  classap_1_1error_1_1invalid__value__type__error.html  classap_1_1error_1_1required__argument__not__parsed__error.html  classap_1_1error_1_1value__already__set__error-members.html  classap_1_1error_1_1value__already__set__error.html  classap_1_1nargs_1_1range-members.html  classap_1_1nargs_1_1range.html  conceptap_1_1action_1_1detail_1_1valid__action__specifier.html  conceptap_1_1utility_1_1equality__comparable.html  conceptap_1_1utility_1_1readable.html  conceptap_1_1utility_1_1valid__argument__value__type.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_7440c80a84150c89eded6c163cdc56e5.html  dir_883e42a949afd9b16c9901393356ea2e.html  files.html  functions.html  functions_func.html  (+38 more)
1.1/: argument__parser_8hpp.html  argument__parser_8hpp_source.html  argument__parser__test__fixture_8hpp_source.html  classap_1_1argument_1_1detail_1_1argument__interface-members.html  classap_1_1argument_1_1detail_1_1argument__interface.html  classap_1_1argument_1_1optional__argument-members.html  classap_1_1argument_1_1optional__argument.html  classap_1_1argument_1_1positional__argument-members.html  classap_1_1argument_1_1positional__argument.html  classap_1_1argument__parser-members.html  classap_1_1argument__parser.html  classap_1_1argument__parser__error.html  classap_1_1error_1_1argument__name__used__error-members.html  classap_1_1error_1_1argument__name__used__error.html  classap_1_1error_1_1argument__not__found__error-members.html  classap_1_1error_1_1argument__not__found__error.html  classap_1_1error_1_1free__value__error.html  classap_1_1error_1_1invalid__choice__error.html  classap_1_1error_1_1invalid__nvalues__error-members.html  classap_1_1error_1_1invalid__nvalues__error.html  classap_1_1error_1_1invalid__value__error-members.html  classap_1_1error_1_1invalid__value__error.html  classap_1_1error_1_1invalid__value__type__error-members.html  classap_1_1error_1_1invalid__value__type__error.html  classap_1_1error_1_1required__argument__not__parsed__error-members.html  classap_1_1error_1_1required__argument__not__parsed__error.html  classap_1_1error_1_1value__already__set__error.html  classap_1_1nargs_1_1range-members.html  classap_1_1nargs_1_1range.html  classes.html  conceptap_1_1action_1_1detail_1_1valid__action__specifier.html  conceptap_1_1utility_1_1equality__comparable.html  conceptap_1_1utility_1_1readable.html  (+47 more)
example/: CMakeLists.txt  Makefile  main.cpp
example/make/: system_unix_like.mk  system_windows.mk  unix_like.mk  windows.mk
example/source/: convert_numbers.cpp  merge_files.cpp  power.cpp  verbosity.cpp
example/src/: convert_numbers.cpp  exponentiation.cpp  merge_files.cpp  multiplication.cpp  power.cpp  verbosity.cpp
test/: CMakeLists.txt  Makefile  test  testing_friend_definitions.hpp
test/include/: argument_parser_test_fixture.hpp  argument_test_fixture.hpp  optional_argument_test_fixture.hpp  positional_argument_test_fixture.hpp  testing_friend_definitions.hpp
test/make/: system_unix_like.mk  system_windows.mk  unix_like.mk  windows.mk
test/source/: test_argument_name.cpp  test_argument_parser_add_argument.cpp  test_argument_parser_info.cpp  test_argument_parser_parse_args.cpp  test_boolean.cpp  test_nargs_range.cpp  test_optional_argument.cpp  test_positional_argument.cpp
test/src/: test_argument_name.cpp  test_argument_parser_add_argument.cpp  test_argument_parser_info.cpp  test_argument_parser_parse_args.cpp  test_boolean.cpp  test_nargs_range.cpp  test_optional_argument.cpp  test_positional_argument.cpp  test_true.cpp
test/tests/: test_argument_name.cpp  test_argument_parser_add_argument.cpp  test_argument_parser_info.cpp  test_argument_parser_ostream.cpp  test_argument_parser_parse_args.cpp  test_boolean.cpp  test_holds_type.cpp  test_nargs_range.cpp  test_nasrgs_range.cpp  test_optional_argument.cpp  test_positional_argument.cpp  test_true.cpp
tests/: CMakeLists.txt
tests/include/: argument_parser_test_fixture.hpp  argument_test_fixture.hpp  optional_argument_test_fixture.hpp  positional_argument_test_fixture.hpp  utility.hpp
tests/source/: test_argument_description_builder.cpp  test_argument_descriptor.cpp  test_argument_name.cpp  test_argument_parser_add_argument.cpp  test_argument_parser_add_elements.cpp  test_argument_parser_info.cpp  test_argument_parser_parse_args.cpp  test_argument_parser_parse_args_unknown_flags_as_values.cpp  test_argument_token.cpp  test_extarnal_libs_config.cpp  test_help_builder.cpp  test_nargs_range.cpp  test_none_type_argument.cpp  test_optional_argument.cpp  test_positional_argument.cpp  test_str_utility.cpp  test_string_utility.cpp
(+3738 files in other folders)
